--- a/attendance.html
+++ b/attendance.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Employee Attendance System</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 30px; }
-    input, select, textarea, button { margin: 5px 0; padding: 5px; width: 200px; }
-    label { display: block; margin-top: 10px; }
-    #result { margin-top: 20px; padding: 10px; border: 1px solid #ccc; white-space: pre-wrap; word-wrap: break-word; }
-  </style>
+<meta charset="UTF-8">
+<title>Attendance</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 20px; }
+  label { display: block; margin: 10px 0 5px; }
+  input, button { padding: 5px; font-size: 14px; }
+  #result { margin-top: 20px; font-weight: bold; color: green; }
+</style>
 </head>
 <body>
-  <h2>Employee Attendance System</h2>
 
-  <label>Name:
-    <input type="text" id="name" placeholder="Enter your name">
-  </label>
+<h2>Employee Attendance</h2>
 
-  <label>Action:
-    <select id="action">
-      <option value="check">Check</option>
-    </select>
-  </label>
+<label for="name">Name:</label>
+<input type="text" id="name" placeholder="Enter your name">
 
-  <label>Remark:
-    <textarea id="remark" placeholder="Optional remark" rows="2"></textarea>
-  </label>
+<label for="action">Action:</label>
+<select id="action">
+  <option value="check-in">Check-in</option>
+  <option value="check-out">Check-out</option>
+</select>
 
-  <button onclick="submitPunch()">Submit</button>
+<label for="remark">Remark (optional):</label>
+<input type="text" id="remark" placeholder="Enter remark">
 
-  <div id="result"></div>
+<button id="submitBtn">Submit</button>
 
-  <script>
-    // Replace with your deployed Google Apps Script Web App URL
-    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxVPOhgdsO5neNU4WTinb5DoUuMuuIVMN8oiPOeHSzvrxhxM_3D92GWmAGV20I1WZRE1w/exec';
+<div id="result"></div>
 
-    function submitPunch() {
-      const name = document.getElementById('name').value.trim();
-      const action = document.getElementById('action').value;
-      const remark = document.getElementById('remark').value.trim();
+<script>
+const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxVPOhgdsO5neNU4WTinb5DoUuMuuIVMN8oiPOeHSzvrxhxM_3D92GWmAGV20I1WZRE1w/exec';
 
-      if (!name) {
-        alert("Please enter your name");
-        return;
-      }
+document.getElementById('submitBtn').addEventListener('click', async () => {
+  const name = document.getElementById('name').value.trim();
+  const action = document.getElementById('action').value;
+  const remark = document.getElementById('remark').value.trim();
 
-      // 构造 URL，确保中文参数 encodeURIComponent
-      const url = `${WEB_APP_URL}?name=${encodeURIComponent(name)}&action=${encodeURIComponent(action)}&remark=${encodeURIComponent(remark)}`;
+  if (!name) {
+    alert("Please enter your name.");
+    return;
+  }
 
-      fetch(url)
-        .then(response => response.json())
-        .then(data => {
-          // textContent 显示 JSON，防止中文乱码
-          document.getElementById('result').textContent = JSON.stringify(data, null, 2);
-        })
-        .catch(err => {
-          document.getElementById('result').textContent = "Request failed: " + err;
-        });
-    }
-  </script>
+  // 构造 GET 参数
+  const params = new URLSearchParams({ name, action, remark });
+  const url = `${WEB_APP_URL}?${params.toString()}`;
+
+  try {
+    const response = await fetch(url);
+    if (!response.ok) throw new Error("Network response not ok");
+    const text = await response.text();
+
+    // 显示一句话结果
+    document.getElementById('result').textContent = text;
+
+    // 可选：清空输入框
+    // document.getElementById('remark').value = '';
+
+  } catch (err) {
+    document.getElementById('result').textContent = "Request failed: " + err;
+  }
+});
+</script>
+
 </body>
 </html>
